--- a/index.html
+++ b/index.html
@@ -1,5 +1,8 @@
 <!DOCTYPE html?
 <html>
+  <head>
+    <link rel="canonical href="https://dakotalong.com"/>
+  </head>
 <body>
 <h1>Hello World</h1>
 <p>Dakota Long</p>
