--- a/index.html
+++ b/index.html
@@ -65,13 +65,13 @@
 
       <section class="resume-section p-3 p-lg-5 d-flex d-column" id="about">
         <div class="my-auto">
-          <h1 class="mb-0">Clarence
-            <span class="text-primary">Taylor</span>
+          <h1 class="mb-0">Dakota
+            <span class="text-primary">Long</span>
           </h1>
-          <div class="subheading mb-5">3542 Berry Street · Cheyenne Wells, CO 80810 · (317) 585-8468 ·
+          <div class="subheading mb-5">2237 Bellamy Dr · Greenville, NC 27858 · (252) 315-4415 ·
             <a href="mailto:name@email.com">name@email.com</a>
           </div>
-          <p class="mb-5">I am experienced in leveraging agile frameworks to provide a robust synopsis for high level overviews. Iterative approaches to corporate strategy foster collaborative thinking to further the overall value proposition.</p>
+          <p class="mb-5">I am a student at East Carolina University that is graduating in May 2018.  My degree is a Bachelor's of Science in Computer Science.  I am very enthusiastic about programming and thourougly enjoy coding in my free time.</p>
           <ul class="list-inline list-social-icons mb-0">
             <li class="list-inline-item">
               <a href="#">
