--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
             <span class="text-primary">Long</span>
           </h1>
           <div class="subheading mb-5">2237 Bellamy Dr · Greenville, NC 27858 · (252) 315-4415 ·
-            <a href="mailto:name@email.com">name@email.com</a>
+            <a href="mailto:name@email.com">dakotalong1996@gmail.com</a>
           </div>
           <p class="mb-5">I am a student at East Carolina University that is graduating in May 2018.  My degree is a Bachelor's of Science in Computer Science.  I am very enthusiastic about programming and thourougly enjoy coding in my free time.</p>
           <ul class="list-inline list-social-icons mb-0">
@@ -115,48 +115,43 @@
 
           <div class="resume-item d-flex flex-column flex-md-row mb-5">
             <div class="resume-content mr-auto">
-              <h3 class="mb-0">Senior Web Developer</h3>
-              <div class="subheading mb-3">Intelitec Solutions</div>
-              <p>Bring to the table win-win survival strategies to ensure proactive domination. At the end of the day, going forward, a new normal that has evolved from generation X is on the runway heading towards a streamlined cloud solution. User generated content in real-time will have multiple touchpoints for offshoring.</p>
+              <h3 class="mb-0">Alliance One International, Inc.</h3>
+              <div class="subheading mb-3">HelpDesk Intern</div>
+              <p>-Provided desktop support for over 300 employees including hardware and software issues.
+                -Entered help information into tracking systems, prioritized requests, evaluated requests, resolved requests, and escalated requests as required, as well as followed-up with end-users for over 5000 employees worldwide.
+              </p>
             </div>
             <div class="resume-date text-md-right">
-              <span class="text-primary">March 2013 - Present</span>
+              <span class="text-primary">June 2016 - Present</span>
             </div>
           </div>
 
           <div class="resume-item d-flex flex-column flex-md-row mb-5">
             <div class="resume-content mr-auto">
-              <h3 class="mb-0">Web Developer</h3>
-              <div class="subheading mb-3">Intelitec Solutions</div>
-              <p>Capitalize on low hanging fruit to identify a ballpark value added activity to beta test. Override the digital divide with additional clickthroughs from DevOps. Nanotechnology immersion along the information highway will close the loop on focusing solely on the bottom line.</p>
+              <h3 class="mb-0">Harris Teeter</h3>
+              <div class="subheading mb-3">Customer Service Clerk</div>
+              <p> -Maintained customer service relations for hundreds of customers per day.
+                  -Managed schedules and breaks for an average of 20 employees at a time.
+                  -Counted and secured tills throughout the day and at night.
+                  -Worked my position up from cashier to customer service in less than a year.
+              </p>
             </div>
             <div class="resume-date text-md-right">
-              <span class="text-primary">December 2011 - March 2013</span>
+              <span class="text-primary">March 2015 - June 2016</span>
             </div>
           </div>
 
           <div class="resume-item d-flex flex-column flex-md-row mb-5">
             <div class="resume-content mr-auto">
-              <h3 class="mb-0">Junior Web Designer</h3>
-              <div class="subheading mb-3">Shout! Media Productions</div>
-              <p>Podcasting operational change management inside of workflows to establish a framework. Taking seamless key performance indicators offline to maximise the long tail. Keeping your eye on the ball while performing a deep dive on the start-up mentality to derive convergence on cross-platform integration.</p>
+              <h3 class="mb-0">East Carolina University Student</h3>
+              <div class="subheading mb-3">Computer Science</div>
+              <p>-Taken classes covering a broad spectrum of topics.  More information on relevant coursework included below.
+              </p>
             </div>
             <div class="resume-date text-md-right">
               <span class="text-primary">July 2010 - December 2011</span>
             </div>
           </div>
-
-          <div class="resume-item d-flex flex-column flex-md-row">
-            <div class="resume-content mr-auto">
-              <h3 class="mb-0">Web Design Intern</h3>
-              <div class="subheading mb-3">Shout! Media Productions</div>
-              <p>Collaboratively administrate empowered markets via plug-and-play networks. Dynamically procrastinate B2C users after installed base benefits. Dramatically visualize customer directed convergence without revolutionary ROI.</p>
-            </div>
-            <div class="resume-date text-md-right">
-              <span class="text-primary">September 2008 - June 2010</span>
-            </div>
-          </div>
-
         </div>
 
       </section>
@@ -167,24 +162,22 @@
 
           <div class="resume-item d-flex flex-column flex-md-row mb-5">
             <div class="resume-content mr-auto">
-              <h3 class="mb-0">University of Colorado Boulder</h3>
+              <h3 class="mb-0">East Carolina University</h3>
               <div class="subheading mb-3">Bachelor of Science</div>
-              <div>Computer Science - Web Development Track</div>
-              <p>GPA: 3.23</p>
+              <div>Computer Science</div>
             </div>
             <div class="resume-date text-md-right">
-              <span class="text-primary">August 2006 - May 2010</span>
+              <span class="text-primary">August 2014 - May 2018</span>
             </div>
           </div>
 
           <div class="resume-item d-flex flex-column flex-md-row">
             <div class="resume-content mr-auto">
-              <h3 class="mb-0">James Buchanan High School</h3>
-              <div class="subheading mb-3">Technology Magnet Program</div>
-              <p>GPA: 3.56</p>
+              <h3 class="mb-0">Ralph L. Fike High School</h3>
+              <div class="subheading mb-3">IB Program</div>
             </div>
             <div class="resume-date text-md-right">
-              <span class="text-primary">August 2002 - May 2006</span>
+              <span class="text-primary">August 2010 - May 2014</span>
             </div>
           </div>
 
