Updated resume section

--- a/index.html
+++ b/index.html
@@ -271,10 +271,10 @@
           </ul>
         </div>
       </section>
-      <section class="resume-section p-3 p-lg-5 d-flex flex-column" id="awards">
+      <section class="resume-section p-3 p-lg-5 d-flex flex-column" id="resume">
         <div class="my-auto">
-          <h2 class="mb-5">Resume &amp;</h2>
-          <a href="/resume/Dakota Long Resume.pdf" target="_blank">Download</a>
+          <h2 class="mb-5">Resume;</h2>
+          <a href="/resume/Dakota Long Resume.pdf" target="_blank">Download Here</a>
         </div>
       </section>
 
