Revert "Updated colors for website"
This reverts commit e8b65d7b2dd8762621fef203aa755e51c553539e.

--- a/index.html
+++ b/index.html
@@ -273,8 +273,8 @@
       </section>
       <section class="resume-section p-3 p-lg-5 d-flex flex-column" id="resume">
         <div class="my-auto">
-          <h2 class="mb-5">Resume</h2>
-          <a href="/resume/Dakota Long Resume.pdf" target="_blank">Download PDF Here</a>
+          <h2 class="mb-5">Resume;</h2>
+          <a href="/resume/Dakota Long Resume.pdf" target="_blank">Download Here</a>
         </div>
       </section>
 
