--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
               </a>
             </li>
             <li class="list-inline-item">
-              <a href="#">
+              <a href="#https://github.com/dakotalong1996">
                 <span class="fa-stack fa-lg">
                   <i class="fa fa-circle fa-stack-2x"></i>
                   <i class="fa fa-github fa-stack-1x fa-inverse"></i>
@@ -273,7 +273,7 @@
       </section>
       <section class="resume-section p-3 p-lg-5 d-flex flex-column" id="resume">
         <div class="my-auto">
-          <h2 class="mb-5">Resume;</h2>
+          <h2 class="mb-5">Resume</h2>
           <a href="/resume/Dakota Long Resume.pdf" target="_blank">Download Here</a>
         </div>
       </section>
