--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
           <p class="mb-5">I am a student at East Carolina University that is graduating in May 2018.  My degree is a Bachelor's of Science in Computer Science.  I am very enthusiastic about programming and thourougly enjoy coding in my free time.</p>
           <ul class="list-inline list-social-icons mb-0">
             <li class="list-inline-item">
-              <a href="#">
+              <a href="https://www.facebook.com/dakota.long.921">
                 <span class="fa-stack fa-lg">
                   <i class="fa fa-circle fa-stack-2x"></i>
                   <i class="fa fa-facebook fa-stack-1x fa-inverse"></i>
@@ -85,15 +85,7 @@
               </a>
             </li>
             <li class="list-inline-item">
-              <a href="#">
-                <span class="fa-stack fa-lg">
-                  <i class="fa fa-circle fa-stack-2x"></i>
-                  <i class="fa fa-twitter fa-stack-1x fa-inverse"></i>
-                </span>
-              </a>
-            </li>
-            <li class="list-inline-item">
-              <a href="#">
+              <a href="https://www.linkedin.com/in/dakota-long-91544a115/">
                 <span class="fa-stack fa-lg">
                   <i class="fa fa-circle fa-stack-2x"></i>
                   <i class="fa fa-linkedin fa-stack-1x fa-inverse"></i>
@@ -101,7 +93,7 @@
               </a>
             </li>
             <li class="list-inline-item">
-              <a href="#https://github.com/dakotalong1996">
+              <a href="https://github.com/dakotalong1996">
                 <span class="fa-stack fa-lg">
                   <i class="fa fa-circle fa-stack-2x"></i>
                   <i class="fa fa-github fa-stack-1x fa-inverse"></i>
