Redesign Skills Section
Removed the icons for irrelevant languages.  Updated all skills to languages I know and IDEs.

--- a/index.html
+++ b/index.html
@@ -184,57 +184,57 @@
           <h2 class="mb-5">Skills</h2>
 
           <div class="subheading mb-3">Programming Languages &amp; Tools</div>
-          <ul class="list-inline list-icons">
-            <li class="list-inline-item">
-              <i class="devicons devicons-html5"></i>
-            </li>
-            <li class="list-inline-item">
-              <i class="devicons devicons-css3"></i>
-            </li>
-            <li class="list-inline-item">
-              <i class="devicons devicons-javascript"></i>
-            </li>
-            <li class="list-inline-item">
-              <i class="devicons devicons-jquery"></i>
-            </li>
-            <li class="list-inline-item">
-              <i class="devicons devicons-sass"></i>
-            </li>
-            <li class="list-inline-item">
-              <i class="devicons devicons-less"></i>
-            </li>
-            <li class="list-inline-item">
-              <i class="devicons devicons-bootstrap"></i>
-            </li>
-            <li class="list-inline-item">
-              <i class="devicons devicons-wordpress"></i>
-            </li>
-            <li class="list-inline-item">
-              <i class="devicons devicons-grunt"></i>
-            </li>
-            <li class="list-inline-item">
-              <i class="devicons devicons-gulp"></i>
-            </li>
-            <li class="list-inline-item">
-              <i class="devicons devicons-npm"></i>
-            </li>
-          </ul>
 
-          <div class="subheading mb-3">Workflow</div>
+          <div class="subheading mb-3">Languages</div>
           <ul class="fa-ul mb-0">
             <li>
               <i class="fa-li fa fa-check"></i>
-              Mobile-First, Responsive Design</li>
+              Java</li>
             <li>
               <i class="fa-li fa fa-check"></i>
-              Cross Browser Testing &amp; Debugging</li>
+              C++</li>
             <li>
               <i class="fa-li fa fa-check"></i>
-              Cross Functional Teams</li>
+              Python</li>
             <li>
               <i class="fa-li fa fa-check"></i>
-              Agile Development &amp; Scrum</li>
+              SQL</li>
+            <li>
+              <i class="fa-li fa fa-check"></i>
+              HTML/CSS</li>
+            <li>
+              <i class="fa-li fa fa-check"></i>
+              C</li>
+            <li>
+              <i class="fa-li fa fa-check"></i>
+              ASP.NET</li>
           </ul>
+
+<div class="subheading mb-3">Tools/IDEs</div>
+          <ul class="fa-ul mb-0">
+            <li>
+              <i class="fa-li fa fa-check"></i>
+              Eclipse</li>
+            <li>
+              <i class="fa-li fa fa-check"></i>
+              Pycharm</li>
+            <li>
+              <i class="fa-li fa fa-check"></i>
+              Visual Studio</li>
+            <li>
+              <i class="fa-li fa fa-check"></i>
+              Oracle DB</li>
+            <li>
+              <i class="fa-li fa fa-check"></i>
+              Android Studio</li>
+            <li>
+              <i class="fa-li fa fa-check"></i>
+              Cloud9</li>
+            <li>
+              <i class="fa-li fa fa-check"></i>
+              Microsoft Office</li>
+          </ul>
+
         </div>
       </section>
 
