Fixed a spacing issue

--- a/index.html
+++ b/index.html
@@ -210,7 +210,7 @@
               ASP.NET</li>
           </ul>
 
-<div class="subheading mb-3">Tools/IDEs</div>
+<div class="subheading mb-3">\nTools/IDEs</div>
           <ul class="fa-ul mb-0">
             <li>
               <i class="fa-li fa fa-check"></i>
